--- a/langs/en_GB/agefodd.lang
+++ b/langs/en_GB/agefodd.lang
@@ -599,7 +599,7 @@ AgfCalendarFromTemplate=Create time slots from following templates
 AgfPDFTextColor=Color of the text in documents
 AgfPDFHeadColor=Color of header and lines in documents
 AgfPDFFootColor=Color of footer in documents
-Settings=Agefodd setting
+AgfSettings=Agefodd setting
 AgfFichePresenceEmpty=Empty attendance sheet
 AgfFichePresenceTrainee=Attendance sheet per trainee
 AgfFichePresenceTraineeLandscape=Attendance sheet (landscape)
