--- a/langs/en_US/agefodd.lang
+++ b/langs/en_US/agefodd.lang
@@ -650,7 +650,7 @@ AgfPDFHeaderColorBg=Background color for header in documents
 AgfPDFHeaderColorText=Text color for header in documents
 AgfPDFColorLines=Color for lines in documents
 AgfPDFFootColor=Color of footer in documents
-Settings=Agefodd setting
+AgfSettings=Agefodd setting
 AgfFichePresenceEmpty=Empty attendance sheet
 AgfFichePresenceTrainee=Attendance sheet per trainee
 AgfFichePresenceTraineeLandscape=Attendance sheet (landscape)
