--- a/langs/es_ES/agefodd.lang
+++ b/langs/es_ES/agefodd.lang
@@ -596,7 +596,7 @@ AgfCalendarFromTemplate=Crear los horarios a partir de los modelos siguientes
 AgfPDFTextColor=Color de texto del cuerpo de las ediciones
 AgfPDFHeadColor=Color de los encabezados y de los rasgos de las ediciones
 AgfPDFFootColor=Color de los pies de página de la ediciones
-Settings=Ajustes del módulo Agefodd
+AgfSettings=Ajustes del módulo Agefodd
 AgfFichePresenceEmpty=Hoja de asistencia vacía
 AgfFichePresenceTrainee=Hoja de asistencia por participante
 AgfFichePresenceTraineeLandscape=Hoja de asistencia (Formato paisaje)
