--- a/langs/fr_FR/agefodd.lang
+++ b/langs/fr_FR/agefodd.lang
@@ -714,7 +714,7 @@ AgfPDFFootColor=Couleur des pieds de pages des éditions
 AgfPDFHeaderColorBg=Couleur de fond des entêtes des éditions
 AgfPDFHeaderColorText=Couleur des textes du entêtes des éditions
 AgfPDFColorLines=Couleur des lines des éditions
-Settings=Paramétrage du module Agefodd
+AgfSettings=Paramétrage du module Agefodd
 AgfFichePresenceEmpty=Feuille d'émargement vide
 AgfFichePresenceTrainee=Feuille d'émargement par participant
 AgfFichePresenceTraineeLandscape=Feuille d'émargement (format paysage)
