--- a/langs/nl_NL/agefodd.lang
+++ b/langs/nl_NL/agefodd.lang
@@ -593,7 +593,7 @@ AgfCalendarFromTemplate=van model
 AgfPDFTextColor=Tekst Kleur Brief Body
 AgfPDFHeadColor=Header Kleur van de pagina's
 AgfPDFFootColor=Footer Kleur van de pagina's
-Settings=Parameters van het moduul Agefodd
+AgfSettings=Parameters van het moduul Agefodd
 AgfFichePresenceEmpty=Template Presentie lijst
 AgfFichePresenceTrainee=Presentie lijst per deelnemer
 AgfFichePresenceTraineeLandscape=Presentielijst (landschap)
